[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/FontChoose.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/LangElement.gd" type="Script" id=2]

[node name="LangElement" type="PanelContainer"]
margin_right = 214.0
margin_bottom = 42.0
script = ExtResource( 2 )

[node name="Element" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 0 )

[node name="LangName" type="CheckBox" parent="Element"]
margin_right = 95.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "LocaleFull"
align = 1

[node name="(" type="Label" parent="Element"]
margin_left = 99.0
margin_top = 4.0
margin_right = 103.0
margin_bottom = 24.0
text = "("

[node name="LocaleShort" type="Label" parent="Element"]
margin_left = 107.0
margin_top = 4.0
margin_right = 146.0
margin_bottom = 24.0
text = "SHORT"

[node name=")" type="Label" parent="Element"]
margin_left = 150.0
margin_top = 4.0
margin_right = 154.0
margin_bottom = 24.0
text = ")"

[node name="FontChoose" parent="Element" instance=ExtResource( 1 )]
margin_left = 158.0
margin_right = 200.0
margin_bottom = 28.0
size_flags_horizontal = 3

[connection signal="toggled" from="Element/LangName" to="." method="_on_LangName_toggled"]
[connection signal="item_selected" from="Element/FontChoose" to="." method="_on_FontChoose_item_selected"]
